src/objects/CDA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Hist_Contract_Account_Link__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <formula>IF(ISBLANK(Hist_Contract_Account_Id__c), &apos;&apos;, 
HYPERLINK(&quot;/&quot; &amp; Hist_Contract_Account_Id__c, IF(ISBLANK(Hist_Contract_Account_Name__c), Hist_Contract_Account_Id__c, Hist_Contract_Account_Name__c)))</formula>
        <label>Hist Contract Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Contract_Account_Name__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Contract Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Contract_Number_Id__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Contract Number Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Contract_Number_Link__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <formula>IF(ISBLANK(Hist_Contract_Number_Id__c), &apos;&apos;, 
HYPERLINK(&quot;/&quot; &amp; Hist_Contract_Number_Id__c, IF(ISBLANK(Hist_Contract_Number__c), Hist_Contract_Number_Id__c, Hist_Contract_Number__c)))</formula>
        <label>Hist Contract Number Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Contract_Number__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Legal_Entity_Name__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_Account_Name__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_City__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_Country__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_State__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_Street__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Recipient_Zipcode__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Recipient Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Requestor_First_Name__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Requestor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hist_Requestor_Last_Name__c</fullName>
        <description>Created by Vikram Singh under CR-11691</description>
        <label>Hist Requestor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Period__c</fullName>
        <inlineHelpText>Length of time the confidentiality obligations remain in effect from  the termination date.</inlineHelpText>
        <label>Holding Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQVIA_Contact_Name__c</fullName>
        <label>IQVIA Contact Name:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Indicator__c</fullName>
        <inlineHelpText>If the recipient Account Name entered reflects the name of an individual person a “Yes” response will assist downstream processes in protecting that individual’s privacy.  It will NOT impact the processing of this CDA request.</inlineHelpText>
        <label>Individual Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Processing_Notes__c</fullName>
        <inlineHelpText>Internal notes section to be used to capture / exchange relevant notes / comments internally regarding the CDA request. This will not appear on any documents or in any internal or external email communications. Reference only.</inlineHelpText>
        <label>Internal Processing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsSiteSignatorySameAsSiteContact__c</fullName>
        <label>IsSiteSignatorySameAsSiteContact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsTodayBtwnEffectiveDateDisclosurePeriod__c</fullName>
        <description>Used to determine taht Today Date is between CDA_Effective_Date__c and Disclosure_Period__c</description>
        <formula>CDA_Effective_Date__c &lt;=  TODAY() &amp;&amp; ADDMONTHS(CDA_Effective_Date__c, VALUE(TEXT( Disclosure_Period__c )) * 12) &gt;=  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CDA_Effective_Date__c &lt;=  TODAY() &amp;&amp; ADDMONTHS(CDA_Effective_Date__c, VALUE(TEXT( Disclosure_Period__c )) * 12) &gt;=  TODAY()</inlineHelpText>
        <label>IsTodayBtwnEffectiveDateDisclosurePeriod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Protocol_Number_Known__c</fullName>
        <description>Do you know the protocol number?</description>
        <label>Do you know the Protocol Number?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Protocol_Title_Known__c</fullName>
        <description>Do you know the protocol title?</description>
        <label>Do you know the Protocol Title?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC_Governing_Law__c</fullName>
        <description>Localize Governing Law</description>
        <label>LOC Governing Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is created for the data migration process.</description>
        <externalId>true</externalId>
        <label>Legacy id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_POC_Cross_Walk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal POC Cross Walk</label>
        <referenceTo>CDA_Legal_POC_Cross_Walk__c</referenceTo>
        <relationshipLabel>CDA Requests</relationshipLabel>
        <relationshipName>CDA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loc_Audit_Type__c</fullName>
        <description>localize value of Audit_Type__c field.</description>
        <label>Loc Audit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_CDA_Format__c</fullName>
        <description>CDA Format</description>
        <label>Loc CDA Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_CDA_Source__c</fullName>
        <description>CDA Source</description>
        <label>Loc CDA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_CDA_Type__c</fullName>
        <description>Localize value of CDA type field according to the selected value.</description>
        <label>Loc CDA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Competitor_Contracting_Capacity__c</fullName>
        <description>loc Competitor Contracting Capacity</description>
        <label>Loc Competitor Contracting Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Competitor_Flag__c</fullName>
        <description>Loc Competitor Flag</description>
        <label>Loc Competitor Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Competitor_Originating_from_Sponsor__c</fullName>
        <description>Loc Competitor Originating from Sponsor</description>
        <label>Loc Competitor Originating from Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Competitor_System_Access__c</fullName>
        <description>Loc Competitor System Access</description>
        <label>Loc Competitor System Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Customer_Consent_to_Disclose__c</fullName>
        <label>Loc Customer Consent to Disclose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Customer_Specified_Vendor_Template__c</fullName>
        <description>Loc Customer-Specified Vendor Template</description>
        <label>Loc Customer-Specified Vendor Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_DisclosurePeriod__c</fullName>
        <description>Loc DisclosurePeriod</description>
        <label>Loc DisclosurePeriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Do_you_know_the_Protocol_Number__c</fullName>
        <description>Loc Do you know the Protocol Number?</description>
        <label>Loc Do you know the Protocol Number?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Do_you_know_the_Protocol_Title__c</fullName>
        <description>Loc Do you know the Protocol Title?</description>
        <label>Loc Do you know the Protocol Title?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Holding_Period__c</fullName>
        <description>Loc Holding Period</description>
        <label>Loc Holding Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Preferred_Method_of_Contact__c</fullName>
        <description>Loc Preferred Method of Contact :</description>
        <label>Loc Preferred Method of Contact :</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Project_Specific_Indicator__c</fullName>
        <description>Loc Project Specific Indicator</description>
        <label>Loc Project Specific Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_QuintilesIMS_Business__c</fullName>
        <description>QuintilesIMS_Business</description>
        <label>Loc IQVIA Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Recipient_Authorized_Signer_Preferre__c</fullName>
        <description>Loc Recipient Authorized Signer Preferre</description>
        <label>Loc Recipient Authorized Signer Preferre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Recipient_Point_of_Contact_Preferred__c</fullName>
        <label>Loc Recipient Point-of-Contact Preferred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Recipient_Point_of_Contact_Prefix__c</fullName>
        <description>Loc Recipient Point of Contact Teleph</description>
        <label>Loc Recipient Point-of-Contact Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_SOPs_Provided__c</fullName>
        <description>SOPs Provided</description>
        <inlineHelpText>SOPs Provided</inlineHelpText>
        <label>Loc SOPs Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Sponsor_Consent_to_Disclose__c</fullName>
        <description>Loc Sponsor Consent to Disclose</description>
        <label>Loc Sponsor Consent to Disclose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Status__c</fullName>
        <description>Loc Status</description>
        <label>Loc Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_Type_of_Vendor_Template__c</fullName>
        <description>Loc Type of Vendor Template</description>
        <label>Loc Type of Vendor Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loc_What_is_the_Study_Sponsor_situation__c</fullName>
        <description>Loc What is the Study Sponsor situation?</description>
        <label>Loc What is the Study Sponsor situation?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Governing_Law__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created by Vikram Singh under CR-11576</description>
        <label>Location of Governing Law</label>
        <referenceTo>CDA_Approved_Governing_Law_Location__c</referenceTo>
        <relationshipLabel>CDA Requests</relationshipLabel>
        <relationshipName>CDA_Approved_Governing_Law_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Committee_Member__c</fullName>
        <inlineHelpText>Legal entity name of the committee member involved in the CDA</inlineHelpText>
        <label>Name of the Committee Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiating_Office__c</fullName>
        <description>System to populate based on negotiator assigned.</description>
        <label>Negotiating Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiator_Assigned_List__c</fullName>
        <label>Negotiator Assigned</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Assigned</fullName>
                    <default>true</default>
                    <label>Not Assigned</label>
                </value>
                <value>
                    <fullName>sweety.kumari@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Twinkle.Mangaonkar@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Neha.Parmar@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Lynette.Leong@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Elizabeth.Moskowitz@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Kara.Taylor@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Rincy.John@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Rhonda.Kodger@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Henrieta.Kisbenedekova@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Rachel.Gillen@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>Self Service Only</fullName>
                </value>
                <value>
                    <fullName>gayathri.menon@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>beverly.harris@quintiles.com</fullName>
                </value>
                <value>
                    <fullName>stephaniemeiyuin.kam@quintiles.com</fullName>
                </value>
                <value>
                    <fullName>Bobbi.Edmond@Quintiles.com</fullName>
                </value>
                <value>
                    <fullName>anuja.deb@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>jamie.townsend@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>rafael.rodriguesdemoraes@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>shrishti.zaveri@iqvia.com</fullName>
                </value>
                <value>
                    <fullName>lakshmi.u@iqvia.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotiator_Assigned__c</fullName>
        <description>CDA Negotiator assigned to the CDA Request</description>
        <inlineHelpText>CDA Negotiator assigned to the CDA Request</inlineHelpText>
        <label>Negotiator Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_of_User_Email__c</fullName>
        <description>This will be used in Email Templates as &apos;Sent on behalf of Email&apos; OR &apos;Requestor Email&apos; due to its SFDC email templates Formula limitation.</description>
        <label>On Behalf of User Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_of_User_Full_Name__c</fullName>
        <description>This will be used in Email Templates as &apos;Sent on behalf of&apos; Name due to its SFDC email templates Formula limitation. Created by Vikram Singh under CR-11764</description>
        <label>On Behalf of User Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Requestor_First_Name__c</fullName>
        <description>The first name for the originating requestor. Created by Vikram Singh under CR-11764.</description>
        <label>Originating Requestor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Requestor_Flag__c</fullName>
        <description>Identifies if this request is being submitted by one person on behalf of a different IQVIA resource. Created by Vikram Singh under CR-11764.</description>
        <label>Originating Requestor Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Requestor_Full_Name__c</fullName>
        <formula>Originating_Requestor_First_Name__c +&apos; &apos;+ Originating_Requestor_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originating Requestor Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Requestor_IQVIA_Email__c</fullName>
        <description>IQVIA email address of the Originating IQVIA Requestor. Created by Vikram Singh under CR-11764.</description>
        <inlineHelpText>Provide the IQVIA email address for the Originating Requestor for whom you are submitting this request.  He/She will receive copies of all email notifications related to this CDA Request.</inlineHelpText>
        <label>Originating Requestor IQVIA Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Requestor_Last_Name__c</fullName>
        <description>The last name for the originating requestor. Created by Vikram Singh under CR-11764.</description>
        <label>Originating Requestor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <inlineHelpText>Recipient&apos;s point of contact preferred method of communication (if known) </inlineHelpText>
        <label>Preferred Method of Contact :  </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description_Long_Textarea__c</fullName>
        <inlineHelpText>Provide a detailed description of the project the CDA is required for. If the request is an IQVIA RDS Audit CDA, please be sure to include the purpose of the Audit.</inlineHelpText>
        <label>Project Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description_Textarea__c</fullName>
        <description>created by Vikram Singh under CR-11529.</description>
        <inlineHelpText>Provide a detailed description of the project the CDA is required for. If the request is an IQVIA RDS Audit CDA, please be sure to include the purpose of the Audit. Max Length - 255 Characters.</inlineHelpText>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Provide a detailed description of the project the CDA is required for. This will appear in the CDA as provided. If the request is for an IQVIA RDS Audit CDA, please be sure to include the purpose of the Audit. Max character length is 255 characters.</inlineHelpText>
        <label>Project Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Indicator__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Used to indicate if the IQVIA or External CDA template is / should be Generic (covering current and all future conversations) or Project-Specific (Only cover the current project-related discussions)</inlineHelpText>
        <label>Project Specific Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Number__c</fullName>
        <inlineHelpText>Provide the protocol number assigned by the sponsor in the protocol or study to which this CDA is specific.</inlineHelpText>
        <label>Protocol Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Title_Long_Textarea__c</fullName>
        <inlineHelpText>Provide the title of the protocol or study to which this CDA is specific.</inlineHelpText>
        <label>Protocol Title</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protocol_Title__c</fullName>
        <description>Updated by Vikram Singh under CR-12019.</description>
        <inlineHelpText>Provide the title of the protocol or study to which this CDA is specific.</inlineHelpText>
        <label>Protocol Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_for_Working_for_a_Competitor__c</fullName>
        <description>Purpose why IQVIA is working with the Competitor? updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Provide a description of the purpose(s) IQVIA is working with the competitor.</inlineHelpText>
        <label>Purpose for Working for a Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_for_working_with_a_competitor__c</fullName>
        <inlineHelpText>Describe the purpose(s) why QuintilesIMS is working with the Competitor</inlineHelpText>
        <label>Purpose for working with a competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Audit__c</fullName>
        <inlineHelpText>Describe why the audit is being requested.</inlineHelpText>
        <label>Purpose of Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QI_Legal_Entity_Governing_Law__c</fullName>
        <description>QI Legal Entity Governing Law</description>
        <label>IQVIA Legal Entity Governing Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QI_Legal_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIA Legal Entity Name. Updated &apos;IQVIA&apos; under CR-11514.</description>
        <inlineHelpText>Select the IQVIA legal entity which will be the executing party to the CDA.</inlineHelpText>
        <label>IQVIA Legal Entity Name</label>
        <referenceTo>QI_Legal_Entity__c</referenceTo>
        <relationshipLabel>CDA Requests</relationshipLabel>
        <relationshipName>CDA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QI_information_disclosed_to_competitor__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Provide a description of the IQVIA information which will be disclosed to the competitor.</inlineHelpText>
        <label>IQVIA info disclosed to competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuintilesIMS_Affiliates_Value__c</fullName>
        <description>updated &apos;IQVIA&apos; under CR-11488</description>
        <inlineHelpText>Identifies if the CDA covers all IQVIA Affiliates.</inlineHelpText>
        <label>IQVIA Affiliates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuintilesIMS_Business__c</fullName>
        <inlineHelpText>Select the applicable business area which will be making the disclosures of Confidential Information. &quot;TAS&quot; was formally known as &quot;IQVIA Commercial&quot;. CSMS was formally known as &quot;IQVIA IES&quot;. As new business areas are added the selection list is expanded.</inlineHelpText>
        <label>IQVIA Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Sales &amp; Medical Solutions (CSMS) (Legacy IES)</fullName>
                </value>
                <value>
                    <fullName>Q Squared</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development Solutions (RDS) (Legacy Quintiles)</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Analytics Solutions (TAS) (Legacy IMS)</fullName>
                </value>
                <value>
                    <fullName>Real World Solutions</fullName>
                </value>
                <value>
                    <fullName>Strategic Sites (Master CDA used with strategic sites about potential trials IF the sponsor has accepted their usage)</fullName>
                </value>
                <value>
                    <fullName>Public Health</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <isActive>false</isActive>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Clinical Research (Legacy Quintiles)</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Research (Legacy Quintiles)</label>
                </value>
                <value>
                    <fullName>Combined Offerings (Both)</fullName>
                    <isActive>false</isActive>
                    <label>Combined Offerings (Both)</label>
                </value>
                <value>
                    <fullName>Data and Services (Legacy IMS)</fullName>
                    <isActive>false</isActive>
                    <label>Data and Services (Legacy IMS)</label>
                </value>
                <value>
                    <fullName>Legacy IMS</fullName>
                    <isActive>false</isActive>
                    <label>Legacy IMS</label>
                </value>
                <value>
                    <fullName>Legacy Quintiles</fullName>
                    <isActive>false</isActive>
                    <label>Legacy Quintiles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Account_Address_Other__c</fullName>
        <inlineHelpText>Recipient Account address corresponding to the Recipient Account Name Other entered above. Only displayed if &quot;other&quot; is selected for the Recipient Account Name above</inlineHelpText>
        <label>Recipient Account Address Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Address_Other_formula__c</fullName>
        <formula>Recipient_Account_Street_Other__c + IF(ISBLANK(Recipient_Account_Street_Other__c), &apos;&apos;, &apos;, &apos;) + Recipient_Account_City_Other__c + IF(ISBLANK(Recipient_Account_City_Other__c), &apos;&apos;, &apos;, &apos;) + TEXT(Recipient_Account_State_Other_PL__c) + IF(ISPICKVAL(Recipient_Account_State_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos;, &apos;) + TEXT(Recipient_Account_Country_Other_PL__c) + IF(ISPICKVAL(Recipient_Account_Country_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos; &apos;) + Recipient_Account_ZipCode_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Account Address Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account_Address__c</fullName>
        <formula>IF(OR(ISBLANK(Recipient_Account__c), ISBLANK(Recipient_Account__r.Complete_Address__c)), Recipient_Account_Street_Other__c + IF(ISBLANK(Recipient_Account_Street_Other__c), &apos;&apos;, &apos;, &apos;) + Recipient_Account_City_Other__c + IF(ISBLANK(Recipient_Account_City_Other__c), &apos;&apos;, &apos;, &apos;) + TEXT(Recipient_Account_State_Other_PL__c) + IF(ISPICKVAL(Recipient_Account_State_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos;, &apos;) + TEXT(Recipient_Account_Country_Other_PL__c) + IF(ISPICKVAL(Recipient_Account_Country_Other_PL__c, &apos;&apos;), &apos;&apos;, &apos; &apos;) + Recipient_Account_ZipCode_Other__c, Recipient_Account__r.Complete_Address__c)</formula>
        <inlineHelpText>Address corresponding to the Recipient Account Name listed above</inlineHelpText>
        <label>Recipient Account Address</label>
        <type>Text</type>
    </fields>
</CustomObject>